# users/src/main/java/com/users/users/controllers/AuthController.java
@@ -1,0 +1,12 @@
+package com.users.users.controllers;
+
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequestMapping("/auth")
+public class AuthController {
+
+    
+
+}
